# QtDMM

./: .gitignore  CMakeLists.txt  README
etc/cmake/: FindHIDAPI.cmake
etc/udev/: 99-qinheng-serial-adapter.rules
src/: src.pro
src/forms/: uidmmprefs.ui
src/sources/: configdlg.cpp  configdlg.h  displaywid.cpp  dmm.cpp  dmm.h  dmmgraph.cpp  dmmgraph.h  dmmprefs.cpp  dmmprefs.h  engnumbervalidator.cpp  guiprefs.cpp  hidport.cpp  hidport.h  main.cpp  mainwid.cpp  mainwin.cpp  porthandle.cpp  porthandle.h  printdlg.cpp  printdlg.h  readerthread.cpp  readerthread.h  readevent.h
tests/: testhidapi.py
